Fix heading styling on Safari

--- a/assets/css/04_site-header.css
+++ b/assets/css/04_site-header.css
@@ -25,6 +25,9 @@
 .site-header__title {
   font-size: var(--font-size-2);
   font-weight: var(--font-weight-2);
+  display: flex;
+  gap: var(--spacing-1);
+  align-items: center;
 
   span {
     font-weight: var(--font-weight-1);
